# pong

./: CMakeLists.txt  README.md
src/: main.cpp
src/Entities/: Ball.cpp  Ball.hpp  Board.cpp  Board.hpp  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp  Racquet.cpp  Racquet.hpp  Score.cpp  Score.hpp  Side.cpp  Side.hpp
src/Enums/: GameState.hpp
src/Game/: Game.cpp  Game.hpp  GameBuilder.cpp  GameBuilder.hpp  GameMode.cpp  GameMode.hpp  GameMode1v1.cpp  GameMode1v1.hpp  GameMode2v1.cpp  GameMode2v1.hpp  GameModeBuilder.cpp  GameModeBuilder.hpp  Menu.cpp  Menu.hpp
src/Managers/: BallManager.cpp  BallManager.hpp  CollisionManager.cpp  CollisionManager.hpp  InputManager.cpp  InputManager.hpp  KeyboardManager.cpp  KeyboardManager.hpp  MovementManager.cpp  MovementManager.hpp  RacquetManager.cpp  RacquetManager.hpp  ScoreManager.cpp  ScoreManager.hpp  TerminalManager.cpp  TerminalManager.hpp  UIManager.cpp  UIManager.hpp
src/Physics/: Point.cpp  Point.hpp  Vector.cpp  Vector.hpp
src/Utils/: Canvas.cpp  Canvas.hpp
